ConfigurationBuilder can parse out Entities

--- a/configuration/configurations/entities_test.yml
+++ b/configuration/configurations/entities_test.yml
@@ -49,7 +49,8 @@ Entities:
             Resource: MyTestResource2
             SelectionCriteria:
               Type: Index
-              FromTask: TaskA
+              Tasks: 
+                - TaskA
               Index: IDX1
           TaskD:
             Resource: MyTestResource3
