Fix inconsistent test data.

--- a/configuration/configurations/entities_test.yml
+++ b/configuration/configurations/entities_test.yml
@@ -34,7 +34,7 @@ Entities:
     Description: This is my test entity
     Components:
       MyTestComponent1:
-        Description: This is a test phase
+        Description: This is a test component
         Parts:
           PartA:
             Resource: MyTestResource
